[metadata]
name = sairyscan
version = 0.0.1
author = Sylvain Prigent
author_email = meriadec.prigent@gmail.com
url = https://github.com/sylvainprigent/sairyscan
license = GPL-3.0-only
description = Airyscan multi-array detector high resolution image reconstruction
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: pytorch
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
python_requires = >=3.9

# add your package requirements here
install_requires =
    torch>=1.9.1
    torchvision>=0.12.0
    scikit-image>=0.18.3
    aicspylibczi


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = */*.tif

[options.entry_points]
console_scripts =
    airyscan = sairyscan.cli.airyscan:main
